@@ -1,6 +1,6 @@
-Date: 2022-09-29
+Date: 2022-10-15
 Package: CHNOSZ
-Version: 1.9.9-41
+Version: 1.9.9-42
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
